--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 .idea/workspace.xml
 .idea/scopes/scope_settings.xml
 .idea/scopes/scope_settings.xml
+.idea/.name
+.idea/encodings.xml
+.idea/modules.xml
+.idea/vcs.xml
